# aaf-labs-2023

./: .gitignore  AAF - Practical Task 2023.docx  BD.py  CMakeLists.txt  DB_OAA.cpp  Database.hpp  Functional.cpp  README.md  Table.hpp  aparser.py  forming_dict_of_words.py  head.h  main.py  parser.py  patterns.py  read_flow.cpp  tiny-db.py  tree_node.py
Bekesheva-Sachuk-FI-12/: .gitignore  DataBase.py  DataCleaning.ipynb  RWayTrie.py  guide.txt  main.py  parser.py  parser_1.py
DB_OAA/: DB_OAA.cpp  DB_OAA.vcxproj  DB_OAA.vcxproj.filters  Database.hpp  Parser.hpp  Table.hpp
Danilov-FI-11/: CommandHandler.py  DataBase.py  Parser.py  main.py
Didukh_Lopatetskiy_FI-13_14/: CMakeLists.txt  README.md
FB-11_YatsentiukAndrii_PadikVolodimir/: README.txt
FB-11_YatsentiukAndrii_PadykVolodimir/: README.txt  Tokenizator_v2.py
FB-11_YatsentiukAndrii_PadykVolodymyr/: README.md  Tokenizator_v2.py
FB-12_Kandyla/: main.py
Hrytsenko-Furutina-FI14-3/: .gitignore  CMakeLists.txt
Isachenko_Voloshin_FI-13/: .gitignore  CMakeLists.txt  README.md
Melnyk_Bobrov_FI-13-11/: README.md
Nedashkivska_Medvediev_FI-14/: main.py
Orlov(FB-14)-Heraschenko(FI-14)/: aparser.py  database.py  main.py
abkerimov_fi-13/: pom.xml
balatska_fi-13_krivoshapova_fi-13_cp1/: .gitignore  CMakeLists.txt
barabash_fi-11/: head.h  kd_tree.cpp  main.cpp  read_flow.cpp
melnyk_fi_13_bobrov_fi_11/: CMakeLists.txt
melnyk_fi_13_bobrov_fi_11/include/: CommandProcessor.h  Parser.h  Trie.h  Types.h
melnyk_fi_13_bobrov_fi_11/src/: CommandProcessor.cpp  Parser.cpp  Trie.cpp  Types.cpp  main.cpp
(+145 files in other folders)
